--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -37,13 +37,13 @@
     section {
       margin: 0 5%;
     }
-    .section__pic-container {
+    /*.section__pic-container {
       width: 275px;
       height: 275px;
       margin: 0 auto 2rem;
-    }
+    }*/
     .about-containers {
-      margin-top: 0;
+      margin-top: 5px;
     }
   }
   
