--- a/style.css
+++ b/style.css
@@ -259,9 +259,9 @@ section{
     display: flex;
   }
   
-  .about-pic {
+  /*.about-pic {
     border-radius: 2rem;
-  }
+  }*/
   
   .arrow {
     position: absolute;
@@ -283,11 +283,11 @@ section{
     height: 80%;
   }
   
-  .section__pic-container {
+  /*.section__pic-container {
     height: 400px;
     width: 400px;
     margin: auto 0;
-  }
+  }*/
 
 /* EXPERIENCE SECTION */
 
