--- a/style.css
+++ b/style.css
@@ -58,6 +58,32 @@ a:hover{
 .logo:hover{
     cursor: default;
 }
+.popup {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.popup-content {
+  background-color: white;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888888;
+  width: 30%;
+  font-weight: bolder;
+}
+.popup-content button {
+  display: block;
+  margin: 0 auto;
+}
+.show {
+  display: block;
+}
 
 
 #hamburger-nav{
@@ -288,6 +314,7 @@ section{
     width: 400px;
     margin: auto 0;
   }*/
+
 
 /* EXPERIENCE SECTION */
 
