--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1400px) {
     #profile {
-      height: 60vh;
+      height: 83vh;
       margin-bottom: 6rem;
     }
     .about-containers {
@@ -37,13 +37,13 @@
     section {
       margin: 0 5%;
     }
-    /*.section__pic-container {
+    .section__pic-container {
       width: 275px;
       height: 275px;
       margin: 0 auto 2rem;
-    }*/
+    }
     .about-containers {
-      margin-top: 5px;
+      margin-top: 0;
     }
   }
   
@@ -53,7 +53,7 @@
       height: 40vh;
     }
     #profile {
-      height: 60vh;
+      height: 83vh;
       margin-bottom: 0;
     }
     article {
